# MLOpsBootcamp

Entrega/1. Estructuracion de proyectos de ML/Hidra/: pipeline.py  predict.py  preprocessors.py
Entrega/1. Estructuracion de proyectos de ML/Pre-commit/: .pre-commit-config.yaml  interrogate_example.py
Entrega/1. Estructuración de proyectos de ML/Pre-commit/: long_function.py
Entrega/1. Estructuración de proyectos de ML/Hidra/: decisiontree  train_pipeline.py
Entrega/2. Desarrollo automatizado de modelos/: Modelos de Regresión con Pycaret.ipynb  Producción_Modelos de Regresión con Pycaret.ipynb  diamond-pipeline.pkl
Entrega/2. Desarrollo automatizado de modelos/.ipynb_checkpoints/: Modelos de Regresión con Pycaret-checkpoint.ipynb
Entrega/3. Registro de modelos con MLFlow/: MLOps con Pycaret y MLflow.ipynb  Registro de modelos y versionado con MLFlow.ipynb  diamond-pipeline.pkl
Entrega/3. Registro de modelos con MLFlow/.ipynb_checkpoints/: MLOps con Pycaret y MLflow-checkpoint.ipynb  Registro de modelos y versionado con MLFlow-checkpoint.ipynb
Entrega/5. Creacion de APIs/: 1.Fundamentos FastAPI.py  2. Tutorial_fastapi_manual.py  Model.py  app.py  my_first_api.py  test.py
Entrega/6. Creacion de aplicaciones Web/Flask/: 3. Introducción a Flask.py  app.py
Entrega/8. Despliegue en Cloud/: Obtener predicciones para nuevos datos.ipynb  lightgbm-reg101-azure-downloaded.pkl
ds_proyect/: pyproject.toml
ds_proyect/tests/: test_ds_proyect.py
trial/ds/: README.md  pyproject.toml
(+4 files in other folders)
