[tool.poetry]
name = "ds_proyect"
version = "0.1.0"
description = ""
authors = ["LauraOrozco <laura.orozcoceron@mercadolibre.com.co>"]

[tool.poetry.dependencies]
python = "^3.8.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
